crates/nash-codegen/src/snapshots/nash_codegen__beta_tests__argument_order.snap
---
source: crates/nash-codegen/src/beta_tests.rs
assertion_line: 43
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(before), pretty(after), output(&baseline), output(&candidate))"
---
--- core before
let anf#3 : int = trace "first" in 44 in
let anf#4 : int -> int = (\x#1 : int y#2 : int -> trace "body" in subtractInteger x#1 y#2) anf#3 in
let anf#5 : int = trace "second" in 2 in
anf#4 anf#5
--- core after
let anf#3 : int = trace "first" in 44 in
let anf#4 : int -> int = \y#2 : int -> trace "body" in subtractInteger anf#3 y#2 in
let anf#5 : int = trace "second" in 2 in
anf#4 anf#5
--- baseline
--- uplc
(program 1.1.0
  [(lam anf_3
    [(lam anf_4
      [(lam anf_5 [anf_4 anf_5])
        (force
          [[(force (builtin trace)) (con string "second")] (delay (con integer 2))])])
      [(lam x_1
        (lam y_2
          (force
            [[(force (builtin trace)) (con string "body")]
              (delay [[(builtin subtractInteger) x_1] y_2])])))
        anf_3]])
    (force
      [[(force (builtin trace)) (con string "first")] (delay (con integer 44))])])
--- result
(con integer 42)
--- logs
["first", "second", "body"]
--- candidate
--- uplc
(program 1.1.0
  [(lam anf_3
    [(lam anf_4
      [(lam anf_5 [anf_4 anf_5])
        (force
          [[(force (builtin trace)) (con string "second")] (delay (con integer 2))])])
      (lam y_2
        (force
          [[(force (builtin trace)) (con string "body")]
            (delay [[(builtin subtractInteger) anf_3] y_2])]))])
    (force
      [[(force (builtin trace)) (con string "first")] (delay (con integer 44))])])
--- result
(con integer 42)
--- logs
["first", "second", "body"]
