crates/nash-codegen/src/snapshots/nash_codegen__beta_tests__multiple_rounds.snap
---
source: crates/nash-codegen/src/beta_tests.rs
assertion_line: 43
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(before), pretty(after), output(&baseline), output(&candidate))"
---
--- core before
(\x#1 : int -> \y#2 : int -> \z#3 : int -> z#3) 0 1 42
--- core after
42
--- baseline
--- uplc
(program 1.1.0
  [[[(lam x_1 (lam y_2 (lam z_3 z_3))) (con integer 0)] (con integer 1)]
    (con integer 42)])
--- result
(con integer 42)
--- logs
[]
--- candidate
--- uplc
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
