crates/nash-codegen/src/snapshots/nash_codegen__beta_tests__oversaturation_argument_order.snap
---
source: crates/nash-codegen/src/beta_tests.rs
assertion_line: 43
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(before), pretty(after), output(&baseline), output(&candidate))"
---
--- core before
let anf#3 : int -> int = (\x#1 : int -> trace "intermediate" in \y#2 : int -> trace "returned body" in y#2) 0 in
let anf#4 : int = trace "extra" in 42 in
anf#3 anf#4
--- core after
let anf#3 : int -> int = trace "intermediate" in \y#2 : int -> trace "returned body" in y#2 in
let anf#4 : int = trace "extra" in 42 in
anf#3 anf#4
--- baseline
--- uplc
(program 1.1.0
  [(lam anf_3
    [(lam anf_4 [anf_3 anf_4])
      (force
        [[(force (builtin trace)) (con string "extra")] (delay (con integer 42))])])
    [(lam x_1
      (force
        [[(force (builtin trace)) (con string "intermediate")]
          (delay
            (lam y_2
              (force [[(force (builtin trace)) (con string "returned body")] (delay y_2)])))]))
      (con integer 0)]])
--- result
(con integer 42)
--- logs
["intermediate", "extra", "returned body"]
--- candidate
--- uplc
(program 1.1.0
  [(lam anf_3
    [(lam anf_4 [anf_3 anf_4])
      (force
        [[(force (builtin trace)) (con string "extra")] (delay (con integer 42))])])
    (force
      [[(force (builtin trace)) (con string "intermediate")]
        (delay
          (lam y_2
            (force [[(force (builtin trace)) (con string "returned body")] (delay y_2)])))])])
--- result
(con integer 42)
--- logs
["intermediate", "extra", "returned body"]
