crates/nash-codegen/src/snapshots/nash_codegen__beta_tests__oversaturation_atomic_success.snap
---
source: crates/nash-codegen/src/beta_tests.rs
assertion_line: 43
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(before), pretty(after), output(&baseline), output(&candidate))"
---
--- core before
(\x#1 : int -> trace "intermediate" in \y#2 : int -> trace "returned body" in addInteger x#1 y#2) 40 2
--- core after
let beta#3 : int -> int = trace "intermediate" in \y#2 : int -> trace "returned body" in addInteger 40 y#2 in
beta#3 2
--- baseline
--- uplc
(program 1.1.0
  [[(lam x_1
    (force
      [[(force (builtin trace)) (con string "intermediate")]
        (delay
          (lam y_2
            (force
              [[(force (builtin trace)) (con string "returned body")]
                (delay [[(builtin addInteger) x_1] y_2])])))]))
    (con integer 40)]
    (con integer 2)])
--- result
(con integer 42)
--- logs
["intermediate", "returned body"]
--- candidate
--- uplc
(program 1.1.0
  [(lam beta_3 [beta_3 (con integer 2)])
    (force
      [[(force (builtin trace)) (con string "intermediate")]
        (delay
          (lam y_2
            (force
              [[(force (builtin trace)) (con string "returned body")]
                (delay [[(builtin addInteger) (con integer 40)] y_2])])))])])
--- result
(con integer 42)
--- logs
["intermediate", "returned body"]
