crates/nash-codegen/src/snapshots/nash_codegen__beta_tests__oversaturation_repeated_integer.snap
---
source: crates/nash-codegen/src/beta_tests.rs
assertion_line: 43
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(before), pretty(after), output(&baseline), output(&candidate))"
---
--- core before
(\x#1 : int -> trace "intermediate" in \y#2 : int -> addInteger x#1 x#1) 21 0
--- core after
let beta#3 : int -> int = trace "intermediate" in \y#2 : int -> addInteger 21 21 in
beta#3 0
--- baseline
--- uplc
(program 1.1.0
  [[(lam x_1
    (force
      [[(force (builtin trace)) (con string "intermediate")]
        (delay (lam y_2 [[(builtin addInteger) x_1] x_1]))]))
    (con integer 21)]
    (con integer 0)])
--- result
(con integer 42)
--- logs
["intermediate"]
--- candidate
--- uplc
(program 1.1.0
  [(lam beta_3 [beta_3 (con integer 0)])
    (force
      [[(force (builtin trace)) (con string "intermediate")]
        (delay (lam y_2 [[(builtin addInteger) (con integer 21)] (con integer 21)]))])])
--- result
(con integer 42)
--- logs
["intermediate"]
