crates/nash-codegen/src/snapshots/nash_codegen__beta_tests__suspended_bodies.snap
---
source: crates/nash-codegen/src/beta_tests.rs
assertion_line: 43
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(before), pretty(after), output(&baseline), output(&candidate))"
---
--- core before
let suspended#3 : @delay int = delay ((\delay#2 : int -> trace "unreachable delay" in error) 0) in
case@Bool true of
  True -> 42
  False -> (\branch#1 : int -> trace "unreachable branch" in error) 0
--- core after
let suspended#3 : @delay int = delay (trace "unreachable delay" in error) in
case@Bool true of
  True -> 42
  False -> trace "unreachable branch" in error
--- baseline
--- uplc
(program 1.1.0
  [(lam suspended_3
    (case
      (con bool True)
      [(lam branch_1
        (force
          [[(force (builtin trace)) (con string "unreachable branch")] (delay (error))]))
        (con integer 0)]
      (con integer 42)))
    (delay
      [(lam delay_2
        (force
          [[(force (builtin trace)) (con string "unreachable delay")] (delay (error))]))
        (con integer 0)])])
--- result
(con integer 42)
--- logs
[]
--- candidate
--- uplc
(program 1.1.0
  [(lam suspended_3
    (case
      (con bool True)
      (force
        [[(force (builtin trace)) (con string "unreachable branch")] (delay (error))])
      (con integer 42)))
    (delay
      (force
        [[(force (builtin trace)) (con string "unreachable delay")] (delay (error))]))])
--- result
(con integer 42)
--- logs
[]
